--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,40 +1,36 @@
-# Web Framework & Server
-fastapi
-uvicorn
+# Core FastAPI
+fastapi==0.115.12
+uvicorn[standard]==0.23.0
 
-# File Handling & Async
-python-multipart # For FastAPI file uploads
-aiofiles         # For async file I/O in upload.py
+# File handling
+python-multipart==0.0.6
+aiofiles==24.1.0
 
-# Image Processing & Metadata
-Pillow           # Image loading, basic EXIF
-opencv-python    # For image processing/annotation (cv2) in DataProcessor
-exifread         # More detailed EXIF reading (used in original DataProcessor)
+# Image processing - FIXED VERSIONS
+Pillow==10.0.0
+opencv-python-headless==4.11.0.86  # Use headless version for servers
+exifread==3.3.1
 
-# Machine Learning & Embeddings
-torch            # PyTorch core (needed for torchvision, sentence-transformers)
-torchvision      # For ResNet model
-sentence-transformers # For text embeddings in search
-scikit-learn     # For cosine_similarity and other ML utilities
-# ultralytics    # Uncomment if you need YOLO object detection
+# ML dependencies - CPU only versions to reduce size
+--index-url https://download.pytorch.org/whl/cpu
+torch==2.5.1+cpu
+torchvision==0.20.1+cpu
+
+# Other ML packages
+sentence-transformers==4.1.0
+scikit-learn==1.6.1
+numpy==1.25.1
 
 # Geolocation
-geopy            # For geocoding addresses/coordinates
+geopy==2.4.1
 
-# OpenAI API
-openai           # For interacting with OpenAI (narrative generation)
-python-dotenv    # For loading .env files (like API keys)
+# OpenAI
+openai==1.77.0
+python-dotenv==1.1.0
 
-# Utilities
-numpy            # Numerical operations (dependency for many ML libs)
-tqdm             # Progress bars (used in DataProcessor)
+# Utils
+tqdm==4.67.1
+aiohttp==3.11.18
 
-aiohttp
-
-# Removed:
-# - pydantic (FastAPI manages this dependency)
-# - SQLAlchemy (Using built-in sqlite3)
-# - ftfy (Often a dependency, but install explicitly if needed)
-# - regex (Often a dependency)
-# - argparse, pathlib (Standard libraries)
-# - Strict version pins (like ==x.y.z) unless absolutely necessary and known compatible
+# Optional YOLO - comment out if causing issues
+ultralytics==8.3.127
