--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,38 +1,15 @@
-# Core FastAPI
-fastapi==0.115.12
-uvicorn[standard]==0.23.0
-
-# File handling
-python-multipart==0.0.6
-aiofiles==24.1.0
-
-# Image processing - FIXED VERSIONS
-Pillow==10.0.0
-opencv-python-headless==4.11.0.86  # Use headless version for servers
-exifread==3.3.1
-
-# ML dependencies - CPU only versions to reduce size
---index-url https://download.pytorch.org/whl/cpu
-torch==2.5.1+cpu
-torchvision==0.20.1+cpu
-
-# Other ML packages
-sentence-transformers==4.1.0
-scikit-learn==1.6.1
-numpy==1.25.1
-
-# Geolocation
-geopy==2.4.1
-
-# OpenAI
-openai==1.77.0
-python-dotenv==1.1.0
-
-# Utils
-tqdm==4.67.1
-aiohttp==3.11.18
-
-# Optional YOLO - comment out if causing issues
-ultralytics==8.3.127
-python-multipart==0.0.20
-sentence-transformers==4.1.0
+fastapi>=0.104.0
+uvicorn[standard]>=0.23.0
+python-multipart>=0.0.6
+aiofiles>=24.1.0
+Pillow>=10.0.0
+python-dotenv>=1.1.0
+openai>=1.0.0
+geopy>=2.4.0
+numpy>=1.25.0
+tqdm>=4.65.0
+aiohttp>=3.8.0
+torch>=2.0.0
+torchvision>=0.15.0
+sentence-transformers>=2.2.0
+scikit-learn>=1.3.0
