--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,3 +13,4 @@ torch>=2.0.0
 torchvision>=0.15.0
 sentence-transformers>=2.2.0
 scikit-learn>=1.3.0
+opencv-python-headless>=4.8.0  # Add this line
